# VTracer

./: .gitignore  CMakeLists.txt  README.md  build.bat
backend/resources/: app.rc.in
backend/src/: AppWindow.cpp  AppWindow.h  ModelDatabase.cpp  ModelDatabase.h  NidekTracer.cpp  NidekTracer.h  SerialPort.cpp  SerialPort.h  Util.cpp  Util.h  main.cpp
data/: models.csv
frontend/: env.d.ts  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: ActivityLog.vue  GlassesWireframe.vue  OrderInputs.vue  RecentSaves.vue  SnifferPanel.vue  TitleBar.vue  TraceButtons.vue
frontend/src/composables/: useBridge.ts
